# OpenGL

./: .gitignore  CMakeLists.txt  output
.cache/clangd/index/: IndexBuffer.cpp.C6FFE92A81E52F48.idx  IndexBuffer.h.812683279566C4B6.idx  Renderer.cpp.44EF1D65352258BF.idx  Renderer.h.AF7BB2496362D3FF.idx  Shader.cpp.E774409C0AE320CC.idx  Shader.h.F8629F84D0F39DD7.idx  VertexArray.cpp.E6F61E900A2BCAC9.idx  VertexArray.h.FAA3AAC86B5E9BF9.idx  VertexBuffer.cpp.80564B115D0F535F.idx  VertexBuffer.h.F85D015C96302A8A.idx  VertexBufferLayout.cpp.DBFB81AD5AC4CAAF.idx  VertexBufferLayout.h.83CEBAAECE422EF0.idx  main.cpp.C19908500720E084.idx
res/shaders/: Basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
